# xiaobaicai-space

./: .gitignore  readme.md
backend/: .env.example  README.md  alembic.ini  main.py  mysql.sql  pyproject.toml  schema.sql  supabase.sql
backend/app/: main.py
backend/app/api/: audit.py  responses.py  router.py
backend/app/api/v1/: admin.py  admin_logs.py  categories.py  posts.py  settings.py  tags.py  users.py
backend/app/assemblers/: README.md  __init__.py  admin_logs.py  categories.py  posts.py  settings.py  tags.py  users.py
backend/app/core/: config.py  database.py  error_codes.py  errors.py  exception_handlers.py  read_models.py  security.py
backend/app/models/: __init__.py  admin_log.py  category.py  post.py  post_like.py  setting.py  tag.py  user.py
backend/app/presenters/: __init__.py  admin_logs.py  categories.py  errors.py  posts.py  settings.py  tags.py  users.py
backend/app/schemas/: admin_log.py  category.py  error.py  post.py  setting.py  tag.py  user.py
backend/app/services/: post_service.py  user_service.py
backend/app/services/commands/: README.md  admin_logs.py  audit.py  categories.py  posts.py  settings.py  tags.py  users.py
backend/app/services/queries/: README.md  admin_logs.py  categories.py  posts.py  settings.py  tags.py  users.py
backend/migrations/: 20260417_add_tags_and_increment_likes.sql  env.py
backend/migrations/versions/: 20260428_0001_initial_schema.py
backend/tests/: test_admin_logs.py  test_categories.py  test_config.py  test_posts.py  test_settings.py  test_tags.py  test_users.py
front/: package-lock.json  (+1 more)
(+10 files in other folders)
